--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ dotnet proxy support
     />
     <meta
       property="og:image"
-      content="https://proxytechsupport.com//images/preview.jpg"
+      content="https://proxytechsupport.com/images/preview.png"
     />
     <meta property="og:url" content="https://proxytechsupport.com/" />
 
@@ -89,7 +89,7 @@ dotnet proxy support
     />
     <meta
       name="twitter:image"
-      content="https://proxytechsupport.com//images/preview.jpg"
+      content="https://proxytechsupport.com/images/preview.png"
     />
 
     <!-- Bootstrap & FontAwesome -->
@@ -214,17 +214,7 @@ dotnet proxy support
       }
     </style>
 
-    <meta
-      name="description"
-      content="18+ years of experience in Proxy Interview and Real-Time Job Support for AI Engineers, Software Developers, and IT professionals. Support for React, Angular, .NET, Python, Java, AWS, Azure, and more."
-    />
-    <meta
-      name="keywords"
-      content="Interview Proxy, Job Support, AI Engineer, React, Angular, .NET, Python, Java, AWS, Azure, Machine Learning, Data Science, Remote Job Support, Tech Support, USA, UK, Canada"
-    />
-    <meta name="author" content="Proxy Job Support Team" />
-
-    <!-- Favicon for browser & Google -->
+<!-- Favicon for browser & Google -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/favicon.ico" />
 
@@ -236,7 +226,7 @@ dotnet proxy support
         "name": "Job Support & Interview Proxy Services",
         "description": "We provide job support and interview proxy for IT roles like React, Angular, Java, AWS and more.",
         "url": "https://proxytechsupport.com/",
-        "image": "https://proxytechsupport.com/image/preview.png"
+        "image": "https://proxytechsupport.com/images/preview.png"
       }
     </script>
   </head>
