--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ dotnet proxy support
       <div class="container">
         <h2 class="section-title">Get in Touch</h2>
         <p class="lead mb-3">
-          📞 Call or WhatsApp: <strong>+91 96606 14469</strong>
+          📞 <strong>+91 96606 14469</strong>
         </p>
         <div class="mb-4">
           <a
