--- a/index.html
+++ b/index.html
@@ -1846,12 +1846,12 @@
     });
 
     // Trigger after 5 seconds on page
-    setTimeout(function () {
-      if (!modalShown && shouldShowModal()) {
-        timeTriggered = true;
-        showEngagementModal();
-      }
-    }, 5000);
+    // setTimeout(function () {
+    //   if (!modalShown && shouldShowModal()) {
+    //     timeTriggered = true;
+    //     showEngagementModal();
+    //   }
+    // }, 5000);
 
     // Trigger on scroll (when user scrolls 30% down)
     let scrollTriggeredFired = false;
