--- a/backup/index002.html
+++ b/backup/index002.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary Meta Tags -->
-  <title>IT Job Support & Interview Assistance – USA, UK, Canada | Real-Time Expert Help</title>
+  <title>Job Support & Interview Proxy for IT Roles – USA, UK, Canada | Live Real-Time Help</title>
   <meta name="description"
-    content="Get real-time IT job support and interview assistance for roles like React, Angular, Java, Python, AWS, DevOps, and more. Serving USA, UK, Canada with expert-backed support." />
+    content="Get real-time job support and interview proxy help for IT roles like React, Angular, Java, Python, AWS, DevOps, and more. Serving USA, UK, Canada with expert-backed assistance. Available 24×7 from India." />
   <meta name="author" content="Proxy Tech Support" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="English" />
@@ -17,7 +17,7 @@
 
   <!-- SEO Keywords -->
   <meta name="keywords"
-    content="IT job support, interview assistance, interview preparation, real-time job support, React job support, Angular job support, Java job support, Python job support, AWS support, DevOps support, remote IT support">
+    content="job support from India, live job support, real-time job support, interview proxy, interview proxy from India, proxy interview help, proxy support for IT jobs, React job support, Angular job support, Java job support, Python job support, DevOps support, AWS job support, Azure support, Data Engineer job support, QA job support, SDET support, Dotnet job support, Salesforce job support, Snowflake support, USA job support services, UK job support services, Canada job support, job support for US clients, remote job support, freelance IT job support, night shift job support, IT job support for working professionals, real-time IT support for projects, live project help for IT, software engineer proxy, developer interview proxy, backend support services, on-call job support IT, help with coding job, react proxy interview, angular proxy interview, dotnet proxy support" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -976,7 +976,7 @@
       "name": "Proxy Tech Support",
       "url": "https://proxytechsupport.com",
       "logo": "https://proxytechsupport.com/images/logo.png",
-      "description": "Professional IT job support and interview assistance services for USA, UK, Canada, and worldwide",
+      "description": "Professional job support and interview proxy services for IT professionals worldwide",
       "contactPoint": {
         "@type": "ContactPoint",
         "telephone": "+91-96606-14469",
@@ -999,13 +999,13 @@
     {
       "@context": "https://schema.org",
       "@type": "Service",
-      "serviceType": "IT Job Support and Interview Assistance Services",
+      "serviceType": "IT Job Support and Interview Proxy Services",
       "provider": {
         "@type": "Organization",
         "name": "Proxy Tech Support"
       },
       "areaServed": ["US", "GB", "CA"],
-      "description": "Real-time IT job support and interview assistance for roles like React, Angular, Java, Python, AWS, DevOps, and more",
+      "description": "Real-time job support and interview proxy services for IT roles including React, Angular, Java, Python, AWS, DevOps, and more",
       "offers": {
         "@type": "Offer",
         "availability": "https://schema.org/InStock",
@@ -1024,24 +1024,24 @@
       "@type": "FAQPage",
       "mainEntity": [{
         "@type": "Question",
-        "name": "What is IT job support service?",
+        "name": "What is job support service?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "IT job support service provides real-time assistance to IT professionals working on live projects. We help with coding, debugging, architecture guidance, and task completion during your working hours."
+          "text": "Job support service provides real-time assistance to IT professionals working on live projects. We help with coding, debugging, architecture guidance, and task completion during your working hours."
         }
       }, {
         "@type": "Question",
-        "name": "How does interview assistance work?",
+        "name": "How does interview proxy work?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Interview assistance service connects you with experienced IT professionals who can represent you during technical interviews. Our experts have in-depth knowledge of various technologies and help you secure job opportunities."
+          "text": "Interview proxy service connects you with experienced IT professionals who can represent you during technical interviews. Our experts have in-depth knowledge of various technologies and help you secure job opportunities."
         }
       }, {
         "@type": "Question",
         "name": "Which technologies do you support?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "We support a wide range of IT technologies including React, Angular, Vue.js, Java, Python, .NET, AWS, Azure, DevOps, Machine Learning, Data Science, QA, and many more IT technologies."
+          "text": "We support a wide range of technologies including React, Angular, Vue.js, Java, Python, .NET, AWS, Azure, DevOps, Machine Learning, Data Science, QA, and many more IT technologies."
         }
       }]
     }
@@ -1117,7 +1117,7 @@
     <div class="container">
       <div class="hero-content">
         <h1 class="display-4 fw-bold mb-4">
-          Professional IT Job Support & Interview Assistance for USA, UK, Canada, and Worldwide
+          Professional Job Support & Interview Proxy Services for IT Professionals
         </h1>
         <p class="lead mt-3 mb-3">
           🎯 18+ Years of Expertise | Real-Time Support | Global Coverage
@@ -1231,10 +1231,10 @@
         <div class="col-md-6 col-lg-4 reveal">
           <div class="service-box">
             <i class="fas fa-user-shield"></i>
-            <h5 class="fw-bold mb-3">Interview Assistance & Preparation</h5>
+            <h5 class="fw-bold mb-3">Interview Proxy</h5>
             <p class="text-muted">
-              Expert-led interview preparation, mock interviews, and real-time technical guidance
-              to help you confidently clear technical and HR interview rounds.
+              Expert-level proxy interviews across technologies. Anonymous & reliable. Our experienced professionals
+              help you crack your dream job with confidence.
             </p>
             <ul class="list-unstyled mt-3">
               <li><i class="fas fa-check text-primary me-2"></i>Technical Interviews</li>
@@ -1246,7 +1246,7 @@
         <div class="col-md-6 col-lg-4 reveal">
           <div class="service-box">
             <i class="fas fa-briefcase"></i>
-            <h5 class="fw-bold mb-3">Real-Time IT Job Support</h5>
+            <h5 class="fw-bold mb-3">Real-Time Job Support</h5>
             <p class="text-muted">
               Get daily job help in your current project — live support, debugging, architecture guidance & task
               delivery. Available during your working hours.
@@ -1261,7 +1261,7 @@
         <div class="col-md-6 col-lg-4 reveal">
           <div class="service-box">
             <i class="fas fa-robot"></i>
-            <h5 class="fw-bold mb-3">AI / ML Engineer IT Job Support</h5>
+            <h5 class="fw-bold mb-3">AI / ML Engineer Help</h5>
             <p class="text-muted">
               Hands-on project & interview support for Machine Learning, Deep Learning, NLP, LLMs, MLOps, Data Science &
               more.
@@ -1283,7 +1283,7 @@
                 <i class="fas fa-users-cog"></i>
               </div>
               <div class="col-md-10">
-                <h5 class="fw-bold mb-3">Direct IT Job Support - No Middlemen</h5>
+                <h5 class="fw-bold mb-3">Direct Job Support - No Middlemen</h5>
                 <p class="mb-3">
                   <strong>100% Direct Service!</strong> We have an in-house team of expert developers who quickly take
                   your project and start working immediately. No outsourcing, no delays, no third parties. Our
@@ -1357,27 +1357,25 @@
         <div class="col-md-6 col-lg-3 reveal">
           <div class="stat-card text-center">
             <h3 class="display-4 fw-bold">1000+</h3>
-            <p class="fw-semibold text-muted mb-0">Successful IT Job Support & Interview Assistance</p>
+            <p class="fw-semibold text-muted mb-0">Successful Job Support & Interview Proxies</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 reveal">
           <div class="stat-card text-center">
             <h3 class="display-4 fw-bold">24×7</h3>
-            <p class="fw-semibold text-muted mb-0">Live IT Job Support for Critical Issues</p>
+            <p class="fw-semibold text-muted mb-0">Live Job Support for Critical Issues</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 reveal">
           <div class="stat-card text-center">
             <h3 class="display-4 fw-bold">50+</h3>
-            <p class="fw-semibold text-muted mb-0">IT Technologies Supported for Job Support & Interview Assistance
-              Services</p>
+            <p class="fw-semibold text-muted mb-0">IT Technologies Supported</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 reveal">
           <div class="stat-card text-center">
             <h3 class="display-4 fw-bold">98.9%</h3>
-            <p class="fw-semibold text-muted mb-0">Client Satisfaction Rate for Job Support & Interview Assistance
-              Services</p>
+            <p class="fw-semibold text-muted mb-0">Client Satisfaction Rate</p>
           </div>
         </div>
       </div>
@@ -1398,8 +1396,7 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-            <p class="mb-4">"Excellent IT job support service! The expert helped me crack a React developer position.
-              Professional,
+            <p class="mb-4">"Excellent service! The expert helped me crack a React developer position. Professional,
               knowledgeable, and always available when needed."</p>
             <div class="d-flex align-items-center">
               <div>
@@ -1418,8 +1415,7 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-            <p class="mb-4">"Got real-time IT job support for my .Net project. The team is responsive and helped me
-              deliver
+            <p class="mb-4">"Got real-time job support for my .Net project. The team is responsive and helped me deliver
               on time. Highly recommended!"</p>
             <div class="d-flex align-items-center">
               <div>
@@ -1438,8 +1434,7 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-            <p class="mb-4">"Amazing AWS interview assistance service. The expert had deep knowledge and helped me
-              secure a
+            <p class="mb-4">"Amazing AWS interview proxy service. The expert had deep knowledge and helped me secure a
               cloud architect role. Thank you!"</p>
             <div class="d-flex align-items-center">
               <div>
@@ -1461,12 +1456,11 @@
         <div class="col-lg-8">
           <div class="faq-item reveal">
             <div class="faq-header" onclick="toggleFAQ(this)">
-              <span>What is IT job support service?</span>
+              <span>What is job support service?</span>
               <i class="fas fa-chevron-down"></i>
             </div>
             <div class="faq-body">
-              <p class="text-muted mb-0">IT job support service provides real-time assistance to IT professionals
-                working
+              <p class="text-muted mb-0">Job support service provides real-time assistance to IT professionals working
                 on live projects. We help with coding, debugging, architecture guidance, and task completion during your
                 working hours. Our experts are available 24/7 to ensure you meet deadlines and deliver quality work.</p>
             </div>
@@ -1474,12 +1468,11 @@
 
           <div class="faq-item reveal">
             <div class="faq-header" onclick="toggleFAQ(this)">
-              <span>How does interview assistance work?</span>
+              <span>How does interview proxy work?</span>
               <i class="fas fa-chevron-down"></i>
             </div>
             <div class="faq-body">
-              <p class="text-muted mb-0">Interview assistance service connects you with experienced IT professionals who
-                can
+              <p class="text-muted mb-0">Interview proxy service connects you with experienced IT professionals who can
                 represent you during technical interviews. Our experts have in-depth knowledge of various technologies
                 and help you secure job opportunities. The process is confidential and professional.</p>
             </div>
@@ -1532,8 +1525,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <h2 class="display-5 fw-bold mb-4">Ready to Get Started?</h2>
-          <p class="lead mb-5">Contact us today and let our experts help you succeed in your IT career with our IT job
-            support and interview assistance services</p>
+          <p class="lead mb-5">Contact us today and let our experts help you succeed in your IT career</p>
           <div class="mb-4">
             <p class="fs-4 mb-3">
               <a href="tel:+919660614469" class="text-white text-decoration-none"><i
@@ -1560,17 +1552,6 @@
       </div>
     </div>
   </section>
-
-  <section class="container py-4">
-    <h3 style="font-size:16px;font-weight:700;">Disclaimer</h3>
-    <p style="font-size:14px;color:#666;">
-      Proxy Tech Support provides interview preparation, technical guidance,
-      and job support services. We do not impersonate candidates or violate
-      employer policies. All services are advisory and educational in nature.
-    </p>
-  </section>
-
-
 
   <!-- Footer -->
   <footer>
