--- a/index.html
+++ b/index.html
@@ -1630,12 +1630,15 @@
         <div class="modal-icon">
           <i class="fab fa-whatsapp"></i>
         </div>
-        <h3 class="modal-title">Need Help? We're Here for You!</h3>
-        <p class="modal-subtitle">Get instant support for your IT job or interview</p>
+        <h3 class="modal-title">Need IT Job or Interview Support? We’re Here to Help!</h3>
+        <p class="modal-subtitle">Get instant support for your IT job or interview with our IT job support and interview
+          assistance services</p>
 
         <div class="modal-offer">
           <strong>🚀 Quick Start Available</strong><br>
-          Our in-house team is ready to help you right away. No waiting, no delays!
+          Our in-house experts can start guiding you immediately with job support, technical assistance, and interview
+          preparation.
+          No waiting, no delays.
         </div>
 
         <a href="https://wa.me/919660614469?text=Hi%2C%20I%20need%20job%20support%20or%20interview%20proxy%20help"
