--- a/index.html
+++ b/index.html
@@ -1102,6 +1102,9 @@
             <a class="nav-link" href="#testimonials">Testimonials</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/blog/">Blog</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#faq">FAQ</a>
           </li>
           <li class="nav-item">
