--- a/index.html
+++ b/index.html
@@ -1101,11 +1101,23 @@
           <li class="nav-item">
             <a class="nav-link" href="#testimonials">Testimonials</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/blog/">
-              Job Support by Technologies
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+              Job Support
             </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/blog/react-job-support/">React Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/angular-job-support/">Angular Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/react-native-job-support/">React Native Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/node-job-support/">Node.js Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/java-job-support/">Java Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/python-job-support/">Python Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/aws-job-support/">AWS Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/devops-job-support/">DevOps Job Support</a></li>
+              <li><a class="dropdown-item" href="/blog/dotnet-job-support/">.NET Job Support</a></li>
+            </ul>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="/blog/">Blog</a>
           </li>
