--- a/index.html
+++ b/index.html
@@ -1953,7 +1953,8 @@
 
       const scrollPercentage = (window.scrollY / (document.documentElement.scrollHeight - window.innerHeight)) * 100;
 
-      if (scrollPercentage >= 30 && shouldShowModal()) {
+      // enagemetn modal disabled for now
+      if (false && scrollPercentage >= 30 && shouldShowModal()) {
         scrollTriggeredFired = true;
         scrollTriggered = true;
 
