--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
           Professional IT Job Support & Interview Assistance for USA, UK, Canada, and Worldwide
         </h1>
         <p class="lead mt-3 mb-3">
-          🎯 18+ Years of Expertise | Real-Time Support | Global Coverage
+          🎯 Years of Expertise | Real-Time Support | Global Coverage
         </p>
         <p class="fs-5 mb-4">
           <i class="fas fa-globe me-2"></i>USA, UK, Canada & More |
@@ -1787,7 +1787,7 @@
       <div class="row mb-4">
         <div class="col-md-4 mb-4 mb-md-0">
           <h5 class="fw-bold mb-3">About Us</h5>
-          <p class="text-light">18+ years of experience providing real-time IT job support and interview proxy
+          <p class="text-light">Years of experience providing real-time IT job support and interview proxy
             assistance for professionals working on USA, UK, and remote projects. Trusted by developers, freshers, and
             enterprise teams across India and globally.
           </p>
