--- a/index.html
+++ b/index.html
@@ -1285,6 +1285,9 @@
               <div class="tech-pill">MVC .NET</div>
               <div class="tech-pill">WPF</div>
               <div class="tech-pill">C# / .NET APIs</div>
+              <div class="tech-pill">.NET MAUI</div>
+              <div class="tech-pill">VB.NET</div>
+              <div class="tech-pill">WinForms</div>
               <div class="tech-pill">Node.js</div>
               <div class="tech-pill">Express.js</div>
               <div class="tech-pill">NestJS</div>
