--- a/index.html
+++ b/index.html
@@ -1288,6 +1288,9 @@
               <div class="tech-pill">.NET MAUI</div>
               <div class="tech-pill">VB.NET</div>
               <div class="tech-pill">WinForms</div>
+              <div class="tech-pill">Blazor</div>
+              <div class="tech-pill">Razor Pages</div>
+              <div class="tech-pill">SignalR</div>
               <div class="tech-pill">Node.js</div>
               <div class="tech-pill">Express.js</div>
               <div class="tech-pill">NestJS</div>
