--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:title" content="Job Support & Proxy Interviews for IT Roles | Live Support from India" />
   <meta property="og:description"
     content="24x7 real-time job support & interview proxy services for global IT professionals. Experts available for React, Java, QA, AWS, and more." />
-  <meta property="og:image" content="https://proxytechsupport.com/images/preview.png" />
+  <meta property="og:image" content="https://proxytechsupport.com/images/previewimg.png" />
   <meta property="og:url" content="https://proxytechsupport.com/" />
   <meta property="og:site_name" content="Proxy Tech Support" />
   <meta property="og:locale" content="en_US" />
@@ -34,7 +34,7 @@
   <meta name="twitter:title" content="Live Job Support & Interview Proxy | IT Experts | React, Java, QA, AWS" />
   <meta name="twitter:description"
     content="Real-time help for developers & testers working on global projects. 1000+ successful proxy interviews & job support cases." />
-  <meta name="twitter:image" content="https://proxytechsupport.com/images/preview.png" />
+  <meta name="twitter:image" content="https://proxytechsupport.com/images/previewimg.png" />
 
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.png" type="image/png" />
