--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Job Support & Proxy Interviews for IT Roles | Live Support from India" />
+  <meta property="og:title" content="IT Job Support & Proxy Interviews | Live Expert Assistance for USA, UK & Canada" />
   <meta property="og:description"
-    content="24x7 real-time job support & interview proxy services for global IT professionals. Experts available for React, Java, QA, AWS, and more." />
+    content="Real-time IT job support and interview assistance for professionals in the USA, UK, Canada, and worldwide. Expert support for React, Angular, Java, .NET, QA, AWS, DevOps, and enterprise technologies." />
   <meta property="og:image" content="https://proxytechsupport.com/images/previewimg.png" />
   <meta property="og:url" content="https://proxytechsupport.com/" />
   <meta property="og:site_name" content="Proxy Tech Support" />
