--- a/index.html
+++ b/index.html
@@ -1410,6 +1410,23 @@
           </div>
         </div>
 
+         <!-- CRM & Business Platforms -->
+         <div class="col-md-6 col-lg-4 reveal">
+          <div class="tech-category">
+            <h3 class="tech-category-title"><i class="fab fa-salesforce"></i> CRM & Business Platforms</h3>
+            <div class="tech-items">
+              <div class="tech-pill">End-to-end CRM customization, integration, and production support.</div>
+              <div class="tech-pill">Salesforce</div>
+              <div class="tech-pill">Microsoft Dynamics 365</div>
+              <div class="tech-pill">Odoo</div>
+              <div class="tech-pill">Zoho CRM</div>
+              <div class="tech-pill">HubSpot CRM</div>
+              <div class="tech-pill">SAP CRM</div>
+              <div class="tech-pill">Custom CRM Solutions</div>
+            </div>
+          </div>
+        </div>
+
         <!-- Java Technology Stack -->
         <div class="col-md-6 col-lg-4 reveal">
           <div class="tech-category">
