--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Primary Meta Tags -->
   <title>IT Job Support & Interview Assistance – USA, UK, Canada | Real-Time Expert Help</title>
   <meta name="description"
-    content="Get real-time IT job support and interview assistance for roles like React, Angular, Java, Python, AWS, DevOps, and more. Serving USA, UK, Canada with expert-backed support." />
+    content="Get real-time IT job support and interview assistance for roles like React, Angular, .NET, Java, Python, AWS, DevOps, and more. Serving USA, UK, Canada with expert-backed support." />
   <meta name="author" content="Proxy Tech Support" />
   <meta name="robots" content="index, follow" />
   <meta name="language" content="English" />
@@ -17,13 +17,13 @@
 
   <!-- SEO Keywords -->
   <meta name="keywords"
-    content="IT job support, interview assistance, interview preparation, real-time job support, React job support, Angular job support, Java job support, Python job support, AWS support, DevOps support, remote IT support">
+    content="IT job support, interview assistance, interview preparation, real-time job support, React job support, Angular job support, .NET job support, Java job support, Cyber Security job support, Salesforce job support, Dynamics 365 job support, Odoo job support, Zoho CRM job support, HubSpot CRM job support, SAP CRM job support, Custom CRM Solutions job support, Python job support, AWS support, DevOps support, remote IT support, Digital Analytics job support, Marketing Tech job support, Testing job support, Quality Engineering job support, AI job support, Machine Learning job support, Data job support, full stack development job support, backend development job support, frontend development job support, database development job support, cloud development job support, DevOps job support, QA job support, software development job support, software testing job support, software engineering job support, software architecture job support, software development life cycle job support, software development process job support, software development methodology job support, software development tools job support, software development frameworks job support, software development libraries job support, software development platforms job support, software development languages job support, software development frameworks job support, software development libraries job support, software development platforms job support, software development languages job support">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="IT Job Support & Proxy Interviews | Live Expert Assistance for USA, UK & Canada" />
   <meta property="og:description"
-    content="Real-time IT job support and interview assistance for professionals in the USA, UK, Canada, and worldwide. Expert support for React, Angular, Java, .NET, QA, AWS, DevOps, and enterprise technologies." />
+    content="Real-time IT job support and interview assistance for professionals in the USA, UK, Canada, and worldwide. Expert support for React, Angular, .NET, Java, Cyber Security, Salesforce, Dynamics 365, Odoo, Zoho CRM, HubSpot CRM, SAP CRM, Custom CRM Solutions, Python, AWS, DevOps, Digital Analytics, Marketing Tech, and enterprise technologies." />
   <meta property="og:image" content="https://proxytechsupport.com/images/previewimg.png" />
   <meta property="og:url" content="https://proxytechsupport.com/" />
   <meta property="og:site_name" content="Proxy Tech Support" />
@@ -31,7 +31,7 @@
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Live Job Support & Interview Proxy | IT Experts | React, Java, QA, AWS" />
+  <meta name="twitter:title" content="Live Job Support & Interview Proxy | IT Experts | React, Angular, .NET, Java, Cyber Security, Salesforce, Dynamics 365, Odoo, Zoho CRM, HubSpot CRM, SAP CRM, Custom CRM Solutions, Python, AWS, DevOps" />
   <meta name="twitter:description"
     content="Real-time help for developers & testers working on global projects. 1000+ successful proxy interviews & job support cases." />
   <meta name="twitter:image" content="https://proxytechsupport.com/images/previewimg.png" />
