--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand fw-bold d-flex align-items-center" href="https://proxytechsupport.com/" aria-label="Home">
-        <img src="images/logo.png" alt="Proxy Tech Support Logo" height="45" class="me-2" loading="eager" />
+        <img src="/images/logo.png" alt="Proxy Tech Support Logo" height="45" class="me-2" loading="eager" />
         <span>Job Support & Proxy</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -1198,6 +1198,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/blog/">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#faq">FAQ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -1846,8 +1849,8 @@
             <li><a href="#tech" class="text-light text-decoration-none">Technologies</a></li>
             <li><a href="#testimonials" class="text-light text-decoration-none">Testimonials</a></li>
             <li><a href="#faq" class="text-light text-decoration-none">FAQ</a></li>
-            <li><a href="../../blog/" class="text-light text-decoration-none">Job Support by Technologies</a></li>
-            <li><a href="../../blog/" class="text-light text-decoration-none">Blog</a></li>
+            <li><a href="/blog/" class="text-light text-decoration-none">Blog</a></li>
+            <li><a href="/interviews/" class="text-light text-decoration-none">Interview Questions</a></li>
             <li><a href="#contact" class="text-light text-decoration-none">Contact</a></li>
           </ul>
         </div>
